; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge-base.c_get_commit_reference.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge-base.c_get_commit_reference.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"Not a valid object name %s\00", align 1
@the_repository = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"Not a valid commit name %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit* (i8*)* @get_commit_reference to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit* @get_commit_reference(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.object_id, align 4
  %4 = alloca %struct.commit*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @get_oid(i8* %5, %struct.object_id* %3)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @die(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* @the_repository, align 4
  %13 = call %struct.commit* @lookup_commit_reference(i32 %12, %struct.object_id* %3)
  store %struct.commit* %13, %struct.commit** %4, align 8
  %14 = load %struct.commit*, %struct.commit** %4, align 8
  %15 = icmp ne %struct.commit* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @die(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %16, %11
  %20 = load %struct.commit*, %struct.commit** %4, align 8
  ret %struct.commit* %20
}

declare dso_local i64 @get_oid(i8*, %struct.object_id*) #1

declare dso_local i32 @die(i8*, i8*) #1

declare dso_local %struct.commit* @lookup_commit_reference(i32, %struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
